# robotics_group_labs

./: .gitignore  README.md  ReadMe.md  report.md  setup.py
config/: ekf.yaml
lab3_pkg/: compare_logger.py  compare_plot.py  package.xml  report.md  setup.py
lab3_pkg/config/: ekf.yaml
lab3_pkg/lab3_pkg/: compare_logger.py  compare_odom_and_cmd.py  compare_pd_and_cmd.py  compare_plot.py  odom_logger.py  pd_controller.py  plot_odom.py  wall_following.py
lab3_pkg/launch/: ekf_localization.launch.py
lab4/: AStarPlanner.py  BFSPlanner.py  BugPlanner.py  DFSPlanner.py  IDDFSPlanner.py  MapEnvironment.py  PRMPlanner.py  PotentialFieldsPlanner.py  README.md  RRTPlanner.py  VisibilityGraphPlanner.py  map3.txt  map4.txt  map5.txt  map6.txt  run.py
lab5_nav/: README.md  package.xml  setup.cfg  setup.py
lab5_nav/config/: nav2_params.yaml
lab5_nav/lab5_nav/: obstacle_aware_waypoint_nav.py
lab5_nav/launch/: nav_bringup.launch.py  nav_stack.launch.py  obstacle_nav.launch.py  robot_state_publisher_tb3.launch.py  warehouse_nav.launch.py
lab5_nav/maps/: tb3_house_bad.pgm  tb3_house_bad.yaml  tb3_house_good.pgm  tb3_house_good.yaml  tb3_world_map.pgm  tb3_world_map.yaml
lab5_nav/scripts/: patch_warehouse_models.py
lab6/: .gitignore  README.MD  main.py  vision_utils.py
lab6/results/: results_log.csv  results_log_color_orange_bright.csv  results_log_color_orange_dim.csv  results_log_color_orange_distance.csv  results_log_color_orange_distractors.csv  (+8 more)
project/: AStarPlanner.py  MapEnvironment.py  README.md  ThetaStarPlanner.py  eval_grid_agent.py  grid_dqn_agent.py  grid_navigation_env.py  map3.txt  map4.txt  map6.txt  map7.txt  map8.txt  map800.txt  map800_sparse.txt  map9.txt  run.py  train_grid_agent.py
(+1 files in other folders)
